fix bug with print icon overflowing header

--- a/src/styles/logsTable.css
+++ b/src/styles/logsTable.css
@@ -3,9 +3,11 @@
     .edit_button {
       display: none;
     }
+
     .screenOnly {
       display: none;
     }
+
     .scrollBox {
       overflow: visible;
       max-height: auto;
@@ -18,43 +20,53 @@
   border: #bce8f1 solid thin;
   display: grid;
   grid-template-rows: 18px 29px 1fr;
+
   span.showMode {
     span {
       display: inline-block;
       width: 4em;
       background-color: darkseagreen;
       text-align: center;
+
       &.active {
         background-color: bisque;
       }
     }
   }
+
   .logHeader {
     color: #31708f;
     background-color: #d9edf7;
     border-bottom: #bce8f1 solid thin; // display: flex;
+
     .showAll {
-      margin-left: 20px;
+      margin-left: 19px;
       cursor: pointer;
     }
+
     span {
       text-align: center;
     }
   }
+
   .scrollBox {
     min-height: 0;
     overflow: scroll;
   }
+
   .logRec {
     position: relative;
     display: flex;
     align-items: center;
+
     &.inbalance {
       border-bottom: blue thin dashed;
     }
+
     &.cleared {
       border-bottom: black thin solid;
     }
+
     .edit_button {
       position: relative;
       left: -1.5em;
@@ -62,20 +74,24 @@
       overflow: visible;
       white-space: nowrap;
       cursor: pointer;
+
       img {
         width: 20px;
       }
     }
+
     &:hover {
       .edit_button {
         display: inline-block;
       }
     }
   }
+
   .logRec.outstanding {
     color: navy;
     font-weight: bold;
     overflow: hidden;
+
     .logText {
       font-size: 1.1em;
       white-space: nowrap;
@@ -88,29 +104,36 @@
     text-align: right;
     padding-right: 1em;
   }
+
   span.logText:hover {
     overflow: auto;
     background-color: rgb(234, 236, 238);
+
     .text {
       white-space: normal;
     }
   }
+
   .logBal {
     text-align: right;
     padding-right: 2em;
     display: inline-block;
     min-width: 5em;
+
     &.credit {
       position: relative;
       right: -18px;
+
       &::after {
         content: ' Cr';
       }
     }
+
     &.owing {
       color: red;
     }
   }
+
   &.historic {
     opacity: 0.5;
   }
@@ -130,9 +153,11 @@ span.logText {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+
   .text {
     white-space: nowrap;
   }
+
   .name {
     font-style: italic;
     font-size: 0.9em;
